# nyan

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile  README.markdown  README.md  Rakefile  TODO.markdown  TODO.md
doc/: failure-policies.markdown
include/nyan/: atomic_integer.hpp  backtrace.hpp  convert.hpp  debug.hpp  destroy.hpp  fail.hpp  panic.hpp  ptr.hpp  random.hpp  source_coordinate.hpp  text_coordinate.hpp  yaml.hpp
include/nyan/convert/: convert_number.hpp
include/nyan/debug/: backtrace.hpp  demangle.hpp
include/nyan/fail/: empty_fail.hpp  errno_fail.hpp  fail_base.hpp  fail_meta.hpp  fail_policy.hpp  fail_record.hpp  not_found_fail.hpp  null_fail.hpp  zero_fail.hpp
include/nyan/functions/: destroy.hpp  nop.hpp
include/nyan/ptr/: const_maybe_ptr.hpp  const_surely_ptr.hpp  const_trusted_ptr.hpp  const_trusted_smart_ptr.hpp  const_untrusted_ptr.hpp  const_untrusted_smart_ptr.hpp  maybe_ptr.hpp  ptr_base.hpp  reference_counted_object.hpp  surely_ptr.hpp  trusted_ptr.hpp  trusted_smart_ptr.hpp  untrusted_ptr.hpp  untrusted_smart_ptr.hpp
src/lib/: backtrace.cpp  panic.cpp  source_coordinate.cpp  text_coordinate.cpp
src/lib/debug/: backtrace.cpp  demangle.cpp
src/lib/fail/: empty_fail.cpp  errno_fail.cpp  fail_base.cpp  fail_policy.cpp  fail_record.cpp  not_found_fail.cpp  null_fail.cpp  zero_fail.cpp
src/lib/ptr/: ptr_base.cpp
src/test/: test.cpp
